# src/lib/db/schema/index.ts
@@ -6,3 +6,4 @@ export * from "./accounts";
 export * from "./users";
 export * from "./sessions";
 export * from "./verifications";
+export * from "./webhooks";
